--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,13 +1,17 @@
 plugins {
     id 'java-library'
 }
-bootJar { enabled = false }
-jar { enabled = true }
+project(':common') {
 
-dependencies {
-    api 'org.springframework.boot:spring-boot-starter-aop'
-    api 'com.fasterxml.jackson.core:jackson-databind'
-    api 'io.jsonwebtoken:jjwt-api:0.11.5'
-    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
-    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+    bootJar { enabled = false }
+    jar { enabled = true }
+
+    dependencies {
+        api 'org.springframework.boot:spring-boot-starter-web'
+        api 'org.springframework.boot:spring-boot-starter-validation'
+        api 'io.swagger.core.v3:swagger-annotations:2.2.8'
+        api 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+        api 'com.fasterxml.jackson.core:jackson-databind'
+        api 'org.springframework.boot:spring-boot-starter-aop'
+    }
 }
