--- a/auth-service/build.gradle
+++ b/auth-service/build.gradle
@@ -1,3 +1,12 @@
 dependencies {
     implementation project(':common')
+    // JWT 라이브러리 의존성
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // Jackson 사용시
+}
+
+bootJar {
+    archiveFileName = 'rcs-auth.jar'
+    mainClass = 'com.ktds.rcsp.auth.AuthServiceApplication'
 }
