--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 plugins {
-    id 'org.springframework.boot' version '3.2.3'
+    id 'org.springframework.boot' version '3.2.3' apply(false)
     id 'io.spring.dependency-management' version '1.1.4'
     id 'java'
 }
+
 
 allprojects {
     apply plugin: 'java'
@@ -54,4 +55,11 @@ subprojects {
         testImplementation 'org.testcontainers:junit-jupiter'
         testImplementation 'org.testcontainers:postgresql'
     }
+}
+
+project(':common') {
+
+    bootJar { enabled = false }
+    jar { enabled = true }
+
 }
