--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,13 @@ subprojects {
         // Database
         implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
         runtimeOnly 'org.postgresql:postgresql'
-        
+
+        // Azure Event Hubs 의존성 추가
+        implementation 'com.azure:azure-messaging-eventhubs:5.15.0'
+        implementation 'com.azure:azure-messaging-eventhubs-checkpointstore-blob:1.16.1'
+        implementation 'com.azure:azure-identity:1.9.0'
+        implementation 'org.apache.commons:commons-csv:1.10.0'
+
         // Lombok
         compileOnly 'org.projectlombok:lombok'
         annotationProcessor 'org.projectlombok:lombok'
