--- a/history-service/application.yml
+++ b/history-service/application.yml
@@ -10,6 +10,10 @@ spring:
     hibernate:
       ddl-auto: none
     show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
     
 server:
   port: 8083
