--- a/message-service/application.yml
+++ b/message-service/application.yml
@@ -14,6 +14,10 @@ spring:
     mongodb:
       uri: ${MONGODB_URI}
       database: ${MONGODB_DATABASE}
+  properties:
+    hibernate:
+      dialect: org.hibernate.dialect.PostgreSQLDialect
+      format_sql: true
     
 server:
   port: 8082
