feat: db설계서 참고하여 entity 수정

--- a/message-service/build.gradle
+++ b/message-service/build.gradle
@@ -5,4 +5,6 @@ dependencies {
 //history-service/build.gradle
 dependencies {
     implementation project(':common')
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+
 }
