--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,17 +1,28 @@
 plugins {
     id 'java-library'
 }
-project(':common') {
 
-    bootJar { enabled = false }
-    jar { enabled = true }
+bootJar { enabled = false }
+jar { enabled = true }
 
-    dependencies {
-        api 'org.springframework.boot:spring-boot-starter-web'
-        api 'org.springframework.boot:spring-boot-starter-validation'
-        api 'io.swagger.core.v3:swagger-annotations:2.2.8'
-        api 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
-        api 'com.fasterxml.jackson.core:jackson-databind'
-        api 'org.springframework.boot:spring-boot-starter-aop'
-    }
+dependencies {
+    // Spring Boot Starters
+    api 'org.springframework.boot:spring-boot-starter-web'
+    api 'org.springframework.boot:spring-boot-starter-validation'
+    api 'org.springframework.boot:spring-boot-starter-data-jpa'
+    api 'org.springframework.boot:spring-boot-starter-aop'
+
+    // Swagger
+    api 'io.swagger.core.v3:swagger-annotations:2.2.8'
+    api 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+
+    // Jackson
+    api 'com.fasterxml.jackson.core:jackson-databind'
+
+    // Lombok
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
+    // Database
+    implementation 'org.postgresql:postgresql:42.7.2'
 }
