--- a/common/application.yml
+++ b/common/application.yml
@@ -5,3 +5,28 @@ spring:
 logging:
   level:
     com.ktds.rcsp: DEBUG
+
+azure:
+  eventhub:
+    connection-string: ${EVENTHUB_CONNECTION_STRING}
+    number-encrypt:
+      name: ${EVENTHUB_ENCRYPT_NUM_REQ}
+      consumer-group: message-service-group
+      producer:
+        enabled: true
+      consumer:
+        enabled: true
+    message-send:
+      name: ${EVENTHUB_MESSAGE_SEND_REQ}
+      consumer-group: message-service-group
+      producer:
+        enabled: true
+      consumer:
+        enabled: true
+    message-result:
+      name: ${EVENTHUB_MESSAGE_RESULT_RES}
+      consumer-group: message-service-group
+      producer:
+        enabled: true
+      consumer:
+        enabled: true
