--- a/history-service/application.yml
+++ b/history-service/application.yml
@@ -14,6 +14,13 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
+
+azure:
+  eventhub:
+    message-send:
+      consumer-group: history-service-group
+    message-result:
+      consumer-group: history-service-group
     
 server:
   port: 8083
