--- a/common/application.yml
+++ b/common/application.yml
@@ -11,19 +11,10 @@ azure:
     connection-string: ${EVENTHUB_CONNECTION_STRING}
     number-encrypt:
       name: ${EVENTHUB_ENCRYPT_NUM_REQ}
-      producer:
-        enabled: true
-      consumer:
-        enabled: true
     message-send:
       name: ${EVENTHUB_MESSAGE_SEND_REQ}
-      producer:
-        enabled: true
-      consumer:
-        enabled: true
     message-result:
       name: ${EVENTHUB_MESSAGE_RESULT_RES}
-      producer:
-        enabled: true
-      consumer:
-        enabled: true
+  consumer-group:
+    message: message-consumer-group
+    history: history-consumer-group
