--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -96,7 +96,7 @@ jobs:
           ./gradlew common:clean common:build -x test
           ./gradlew auth-service:clean auth:build -x test
           ./gradlew message-service:clean message:build -x test
-          ./gradlew history-service:clean history:build -x test
+           # ./gradlew history-service:clean history:build -x test
           ./gradlew basedata-service:clean basedata:build -x test
 
       - name: Set up Docker Buildx
