--- a/common/build.gradle
+++ b/common/build.gradle
@@ -9,7 +9,6 @@ dependencies {
     // Spring Boot Starters
     api 'org.springframework.boot:spring-boot-starter-web'
     api 'org.springframework.boot:spring-boot-starter-validation'
-    api 'org.springframework.boot:spring-boot-starter-data-jpa'
     api 'org.springframework.boot:spring-boot-starter-aop'
 
     // Swagger
@@ -18,6 +17,11 @@ dependencies {
 
     // Jackson
     api 'com.fasterxml.jackson.core:jackson-databind'
+
+    // Database
+    api 'org.springframework.boot:spring-boot-starter-data-jpa'
+    runtimeOnly 'org.postgresql:postgresql'
+    api 'org.springframework.boot:spring-boot-starter-data-mongodb'
 
     // Lombok
     compileOnly 'org.projectlombok:lombok'
@@ -28,4 +32,5 @@ dependencies {
 
     // SLF4J API
     implementation 'org.slf4j:slf4j-api:2.0.9'
+
 }
