--- a/history-service/application.yml
+++ b/history-service/application.yml
@@ -1,19 +1,12 @@
 spring:
   application:
     name: history-service
-  datasource:
-    url: ${HISTORY_DB_URL}
-    username: ${HISTORY_DB_USERNAME}
-    password: ${HISTORY_DB_PASSWORD}
-    driver-class-name: org.postgresql.Driver
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
+  data:
+    mongodb:
+      uri: ${MONGODB_URI}
+      database: ${MONGODB_DATABASE}
+      username: ${MONGODB_DB_USERNAME}
+      password: ${MONGODB_DB_PASSWORD}
 azure:
   eventhub:
     connection-string: ${EVENTHUB_CONNECTION_STRING}
