--- a/.github/workflows/cicd2.yml
+++ b/.github/workflows/cicd2.yml
@@ -90,19 +90,23 @@ jobs:
           IMAGE_ORG: rcs
           IMAGE_TAG: ${{ needs.build.outputs.image_tag }}
         run: |
-          for service in auth message history basedata; do
+          for service in auth message history basedata
+          do
             echo "Building ${service} service image..."
             
             # Create temporary Dockerfile with corrected paths
-            cat > "Dockerfile.${service}" << 'EOF'
-            FROM eclipse-temurin:17-jdk-alpine
-            COPY ${service}-service/build/libs/${service}-service-*.jar app.jar
-            ENTRYPOINT ["java","-jar","/app.jar"]
-            EOF
+            cat << EOF > "Dockerfile.${service}"
+FROM eclipse-temurin:17-jdk-alpine
+COPY ${service}-service/build/libs/${service}-service-*.jar app.jar
+ENTRYPOINT ["java","-jar","/app.jar"]
+EOF
+            
+            # Build Docker image
             docker build -f "Dockerfile.${service}" \
               -t "${IMAGE_REG}/${IMAGE_ORG}/rcs-${service}:${IMAGE_TAG}" \
               -t "${IMAGE_REG}/${IMAGE_ORG}/rcs-${service}:latest" .
             
+            # Push Docker images
             docker push "${IMAGE_REG}/${IMAGE_ORG}/rcs-${service}:${IMAGE_TAG}"
             docker push "${IMAGE_REG}/${IMAGE_ORG}/rcs-${service}:latest"
           done
