--- a/message-service/build.gradle
+++ b/message-service/build.gradle
@@ -1,3 +1,8 @@
+bootJar {
+    archiveFileName = "message-service.jar"
+}
+
+
 dependencies {
     implementation project(':common')
 
@@ -15,6 +20,12 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
 
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2' // 버전은 프로젝트에 맞게 조정
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     // Azure Event Hubs
     implementation 'com.azure:azure-messaging-eventhubs:5.15.0'
