--- a/message-service/application.yml
+++ b/message-service/application.yml
@@ -8,12 +8,8 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
-  data:
-    mongodb:
-      uri: ${MONGODB_URI}
-      database: ${MONGODB_DATABASE}
   properties:
     hibernate:
       dialect: org.hibernate.dialect.PostgreSQLDialect
