--- a/.github/workflows/cicd2.yml
+++ b/.github/workflows/cicd2.yml
@@ -1,193 +1,336 @@
-name: RCS Application CI/CD
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: ${userid}-rcs-config
+  namespace: ${app_namespace}
+data:
+  APP_NAME: "rcs"
+  SERVER_PORT: "8080"
 
-on:
-  workflow_dispatch:
-    inputs:
-      USERID:
-        description: 'User ID for resource naming (lowercase letters and numbers only)'
-        required: true
-        default: 'dg4us'
-        type: string
-
-env:
-  RESOURCE_GROUP: ${{ vars.RESOURCE_GROUP }}
-  LOCATION: ${{ vars.LOCATION }}
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    outputs:
-      image_tag: ${{ steps.set_tag.outputs.image_tag }}
+  #Message_DB
+  MESSAGE_DB_URL: "jdbc:postgresql://10.0.215.208:5432/rcs-message-db"
+  MESSAGE_DB_USERNAME: "dg4s"
+  MESSAGE_DB_PASSWORD: "p@ssw0rd!@"
+  #BASEDATA_DB
+  BASEDATA_DB_URL:jdbc: "postgresql://10.0.43.236:5432/rcs-base-db"
+  BASEDATA_DB_USERNAME: "dg4s"
+  BASEDATA_DB_PASSWORD: "p@ssw0rd!@"
+  #AUTH_DB
+  AUTH_DB_URL:jdbc: "postgresql://10.0.195.172:5432/rcs-auth-db"
+  AUTH_DB_USERNAME: "dg4s"
+  AUTH_DB_PASSWORD: "p@ssw0rd!@"
+  #MONGO_DB
+  MONGODB_URI: "mongodb+srv://dg4us-mongo.mongocluster.cosmos.azure.com/"
+  MONGODB_DB_USERNAME: "dg4sadm"
+  MONGODB_DB_PASSWORD: "p@ssw0rd!@"
+  MONGODB_DATABASE: "rcs-history-db"
     
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Set image tag
-        id: set_tag
-        run: |
-          echo "image_tag=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_OUTPUT
+  # JPA 설정
+  JPA_DDL_AUTO: "update"
+  JPA_SHOW_SQL: "true"
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: gradle
-
-      - name: Build Applications
-        run: |
-          chmod +x gradlew
-          ./gradlew auth-service:clean auth:build -x test
-          ./gradlew message-service:clean message:build -x test
-          ./gradlew history-service:clean history:build -x test
-          ./gradlew basedata-service:clean basedata:build -x test
-
-      - name: Check build outputs
-        run: |
-          for service in auth message history basedata; do
-            echo "Checking ${service}-service build output..."
-            ls -la ${service}-service/build/libs/
-          done
-
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: build-artifacts
-          path: |
-            */build/libs/
-            deployment/
-            Dockerfile-*
-
-  release:
-    needs: build
-    runs-on: ubuntu-latest
-    outputs:
-      image_tag: ${{ needs.build.outputs.image_tag }}
-    
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: build-artifacts
-          path: .
-
-      - name: Display structure of downloaded files
-        run: ls -R
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to Azure Container Registry
-        uses: azure/docker-login@v1
-        with:
-          login-server: ${{ github.event.inputs.USERID }}cr.azurecr.io
-          username: ${{ secrets.ACR_USERNAME }}
-          password: ${{ secrets.ACR_PASSWORD }}
-
-      - name: Build and Push Container Images
+  #EVENTHUB
+  EVENTHUB_CONNECTION_STRING: "Endpoint=sb://dg4us-eventhub-ns.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=ABUzYkX9Ca3F3Xo4b6bi0Mf+HuqRA12qA+AEhCsri3A="
+  # 수신번호 암호화 요청 큐
+  EVENTHUB_ENCRYPT_NUM_REQ: "number-encrypt-requests"
+  # 메시지 발송 요청 큐
+  EVENTHUB_MESSAGE_SEND_REQ: "rcs-message-send"
+  # 메시지 수신결과 응답 큐
+  EVENTHUB_MESSAGE_RESULT_RES: "rcs-message-result"
+  # 미사용 
+  ENCRYPTION_KEY: "your_encryption_key" 
+  
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: ${userid}-rcs-auth
+  namespace: ${app_namespace}
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: auth-service
+      userid: ${userid}
+  template:
+    metadata:
+      labels:
+        app: auth-service
+        userid: ${userid}
+    spec:
+      containers:
+      - name: auth-service
+        image: ${command_image_path}
+        imagePullPolicy: Always
+        ports:
+        - containerPort: 8080        
+        resources:
+          requests:
+            cpu: ${resources_requests_cpu}
+            memory: ${resources_requests_memory}
+          limits:
+            cpu: ${resources_limits_cpu}
+            memory: ${resources_limits_memory}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: ${userid}-rcs-auth
+  namespace: ${app_namespace}
+spec:
+  selector:
+    app: auth-service
+    userid: ${userid}
+  ports:
+  - port: 8080
+    targetPort: 8080
+  type: LoadBalancer
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: ${userid}-rcs-basedata
+  namespace: ${app_namespace}
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: basedata-service
+      userid: ${userid}
+  template:
+    metadata:
+      labels:
+        app: basedata-service
+        userid: ${userid}
+    spec:
+      containers:
+      - name: basedata-service
+        image: ${query_image_path}
+        imagePullPolicy: Always
+        ports:
+        - containerPort: 8080
+        envFrom:
+        - configMapRef:
+            name: ${userid}-rcs-config
         env:
-          IMAGE_REG: ${{ github.event.inputs.USERID }}cr.azurecr.io
-          IMAGE_ORG: rcs
-          IMAGE_TAG: ${{ needs.build.outputs.image_tag }}
-        run: |
-          for service in auth message history basedata
-          do
-            echo "Building ${service} service image..."
-            
-            # Create Dockerfile content
-            echo "FROM eclipse-temurin:17-jdk-alpine" > "Dockerfile.${service}"
-            echo "COPY ${service}-service/build/libs/${service}-service-*.jar app.jar" >> "Dockerfile.${service}"
-            echo 'ENTRYPOINT ["java","-jar","/app.jar"]' >> "Dockerfile.${service}"
-            
-            # Build Docker image
-            docker build -f "Dockerfile.${service}" \
-              -t "${IMAGE_REG}/${IMAGE_ORG}/rcs-${service}:${IMAGE_TAG}" \
-              -t "${IMAGE_REG}/${IMAGE_ORG}/rcs-${service}:latest" .
-            
-            # Push Docker images
-            docker push "${IMAGE_REG}/${IMAGE_ORG}/rcs-${service}:${IMAGE_TAG}"
-            docker push "${IMAGE_REG}/${IMAGE_ORG}/rcs-${service}:latest"
-          done
-
-  deploy:
-    needs: [build, release]
-    runs-on: ubuntu-latest
-    environment: production
-    
-    steps:
-      - uses: actions/download-artifact@v3
-        with:
-          name: build-artifacts
-          path: .
-
-      - name: Azure Login
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-      - name: Set up kubelogin
-        uses: azure/use-kubelogin@v1
-        with:
-          kubelogin-version: 'v0.0.25'
-
-      - name: Get AKS Credentials
-        uses: azure/aks-set-context@v3
-        with:
-          resource-group: ${{ env.RESOURCE_GROUP }}
-          cluster-name: ${{ github.event.inputs.USERID }}-aks
-
-      - name: Create Namespaces and Secrets
+		- name: BASEDATA_DB_URL
+            valueFrom: 
+              configMapKeyRef:
+                 name: ${userid}-rcs-config
+                 key: BASEDATA_DB_URL
+		- name: BASEDATA_DB_USERNAME
+            valueFrom: 
+              configMapKeyRef:
+                 name: ${userid}-rcs-config
+                 key: BASEDATA_DB_USERNAME
+        - name: BASEDATA_DB_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: ${userid}-db-credentials
+              key: BASEDATA_DB_PASSWORD
+        resources:
+          requests:
+            cpu: ${resources_requests_cpu}
+            memory: ${resources_requests_memory}
+          limits:
+            cpu: ${resources_limits_cpu}
+            memory: ${resources_limits_memory}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: ${userid}-rcs-basedata
+  namespace: ${app_namespace}
+spec:
+  selector:
+    app: basedata-service
+    userid: ${userid}
+  ports:
+  - port: 8080
+    targetPort: 8080
+  type: LoadBalancer
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: ${userid}-rcs-history
+  namespace: ${app_namespace}
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: history-service
+      userid: ${userid}
+  template:
+    metadata:
+      labels:
+        app: history-service
+        userid: ${userid}
+    spec:
+      containers:
+      - name: history-service
+        image: ${query_image_path}
+        imagePullPolicy: Always
+        ports:
+        - containerPort: 8080
+        envFrom:
+        - configMapRef:
+            name: ${userid}-rcs-config
         env:
-          DB_NAMESPACE: rcs-mvp
-          APP_NAMESPACE: rcs-mvp
-        run: |
-          kubectl create namespace ${DB_NAMESPACE} --dry-run=client -o yaml | kubectl apply -f -
-          kubectl create namespace ${APP_NAMESPACE} --dry-run=client -o yaml | kubectl apply -f -
-          
-          kubectl create secret generic eventhub-secret \
-            --namespace ${APP_NAMESPACE} \
-            --from-literal=ehub-connection-string='${{ secrets.EVENTHUB_CONNECTION_STRING }}' \
-            --from-literal=encrypt-hub-name='number-encrypt-requests' \
-            --from-literal=send-hub-name='rcs-message-send' \
-            --from-literal=result-hub-name='rcs-message-result' \
-            --from-literal=consumer-group='$Default' \
-            --dry-run=client -o yaml | kubectl apply -f -
-
-          kubectl create secret generic storage-secret \
-            --namespace ${APP_NAMESPACE} \
-            --from-literal=connection-string='${{ secrets.STORAGE_CONNECTION_STRING }}' \
-            --dry-run=client -o yaml | kubectl apply -f -
-
-      - name: Generate and Apply Deployment
+		- name: MONGODB_URI
+            valueFrom: 
+              configMapKeyRef:
+                 name: ${userid}-rcs-config
+                 key: MONGODB_URI
+		- name: MONGODB_DATABASE
+            valueFrom: 
+              configMapKeyRef:
+                 name: ${userid}-rcs-config
+                 key: MONGODB_DATABASE
+        - name: MONGODB_DB_USERNAME
+            valueFrom: 
+              configMapKeyRef:
+                 name: ${userid}-rcs-config
+                 key: MONGODB_DB_USERNAME
+        - name: MONGODB_DB_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: ${userid}-db-credentials
+              key: MONGODB_DB_PASSWORD
+        - name: STORAGE_CONNECTION_STRING
+          valueFrom:
+            secretKeyRef:
+              name: storage-secret
+              key: connection-string
+        - name: EVENTHUB_CONNECTION_STRING
+          valueFrom:
+            secretKeyRef:
+              name: eventhub-secret
+              key: plan-connection-string
+        - name: EVENTHUB_ENCRYPT_NUM_REQ
+          value: "number-encrypt-requests"
+        - name: EVENTHUB_MESSAGE_SEND_REQ
+          value: "rcs-message-send"
+        - name: EVENTHUB_MESSAGE_RESULT_RES
+          value: "rcs-message-result" 		  
+        resources:
+          requests:
+            cpu: ${resources_requests_cpu}
+            memory: ${resources_requests_memory}
+          limits:
+            cpu: ${resources_limits_cpu}
+            memory: ${resources_limits_memory}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: ${userid}-rcs-history
+  namespace: ${app_namespace}
+spec:
+  selector:
+    app: history-service
+    userid: ${userid}
+  ports:
+  - port: 8080
+    targetPort: 8080
+  type: LoadBalancer
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: ${userid}-rcs-message
+  namespace: ${app_namespace}
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: message-service
+      userid: ${userid}
+  template:
+    metadata:
+      labels:
+        app: message-service
+        userid: ${userid}
+    spec:
+      containers:
+      - name: message-service
+        image: ${query_image_path}
+        imagePullPolicy: Always
+        ports:
+        - containerPort: 8080
+        envFrom:
+        - configMapRef:
+            name: ${userid}-rcs-config
         env:
-          IMAGE_TAG: ${{ needs.build.outputs.image_tag }}
-          IMAGE_REG: ${{ github.event.inputs.USERID }}cr.azurecr.io
-          IMAGE_ORG: rcs
-          DB_NAMESPACE: rcs-mvp
-          APP_NAMESPACE: rcs-mvp
-        run: |
-          envsubst < deployment/deploy.yaml.template > deployment/deploy.yaml
-          echo "Generated deployment manifest:"
-          cat deployment/deploy.yaml
-          kubectl apply -f deployment/deploy.yaml
-
-      - name: Verify Deployment
-        env:
-          APP_NAMESPACE: rcs-mvp
-        run: |
-          for service in auth message history basedata; do
-            echo "Waiting for ${service} service..."
-            kubectl wait --for=condition=ready pod \
-              -l "app=${service}-service,userid=${{ github.event.inputs.USERID }}" \
-              -n ${APP_NAMESPACE} --timeout=600s || true
-              
-            IP=$(kubectl get svc ${{ github.event.inputs.USERID }}-rcs-${service} \
-              -n ${APP_NAMESPACE} \
-              -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
-            echo "${service} Service IP: ${IP}"
-            
-            if [ -z "${IP}" ]; then
-              echo "Error: ${service} service IP not available"
-              exit 1
-            fi
-          done
+		- name: MESSAGE_DB_URL
+            valueFrom: 
+              configMapKeyRef:
+                 name: ${userid}-rcs-config
+                 key: MESSAGE_DB_URL
+		- name: MESSAGE_DB_USERNAME
+            valueFrom: 
+              configMapKeyRef:
+                 name: ${userid}-rcs-config
+                 key: MESSAGE_DB_USERNAME
+        - name: MESSAGE_DB_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: ${userid}-db-credentials
+              key: MESSAGE_DB_PASSWORD
+		- name: MONGODB_URI
+            valueFrom: 
+              configMapKeyRef:
+                 name: ${userid}-rcs-config
+                 key: MONGODB_URI
+		- name: MONGODB_DATABASE
+            valueFrom: 
+              configMapKeyRef:
+                 name: ${userid}-rcs-config
+                 key: MONGODB_DATABASE
+        - name: MONGODB_DB_USERNAME
+            valueFrom: 
+              configMapKeyRef:
+                 name: ${userid}-rcs-config
+                 key: MONGODB_DB_USERNAME
+        - name: MONGODB_DB_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: ${userid}-db-credentials
+              key: MONGODB_DB_PASSWORD
+        - name: STORAGE_CONNECTION_STRING
+          valueFrom:
+            secretKeyRef:
+              name: storage-secret
+              key: connection-string
+        - name: EVENTHUB_CONNECTION_STRING
+          valueFrom:
+            secretKeyRef:
+              name: eventhub-secret
+              key: plan-connection-string
+        - name: EVENTHUB_ENCRYPT_NUM_REQ
+          value: "number-encrypt-requests"
+        - name: EVENTHUB_MESSAGE_SEND_REQ
+          value: "rcs-message-send"
+        - name: EVENTHUB_MESSAGE_RESULT_RES
+          value: "rcs-message-result" 		  
+        resources:
+          requests:
+            cpu: ${resources_requests_cpu}
+            memory: ${resources_requests_memory}
+          limits:
+            cpu: ${resources_limits_cpu}
+            memory: ${resources_limits_memory}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: ${userid}-rcs-message
+  namespace: ${app_namespace}
+spec:
+  selector:
+    app: message-service
+    userid: ${userid}
+  ports:
+  - port: 8080
+    targetPort: 8080
+  type: LoadBalancer
