--- a/deployment/deploy.yaml.template
+++ b/deployment/deploy.yaml.template
@@ -12,11 +12,11 @@ data:
   MESSAGE_DB_USERNAME: "dg4s"
   MESSAGE_DB_PASSWORD: "p@ssw0rd!@"
   #BASEDATA_DB
-  BASEDATA_DB_URL:jdbc: "postgresql://10.0.43.236:5432/rcs-base-db"
+  BASEDATA_DB_URL: "jdbc:postgresql://10.0.43.236:5432/rcs-base-db"
   BASEDATA_DB_USERNAME: "dg4s"
   BASEDATA_DB_PASSWORD: "p@ssw0rd!@"
   #AUTH_DB
-  AUTH_DB_URL:jdbc: "postgresql://10.0.195.172:5432/rcs-auth-db"
+  AUTH_DB_URL: "jdbc:postgresql://10.0.195.172:5432/rcs-auth-db"
   AUTH_DB_USERNAME: "dg4s"
   AUTH_DB_PASSWORD: "p@ssw0rd!@"
   #MONGO_DB
