--- a/.github/workflows/cicd2.yml
+++ b/.github/workflows/cicd2.yml
@@ -165,10 +165,23 @@ jobs:
           IMAGE_ORG: rcs
           DB_NAMESPACE: rcs-mvp
           APP_NAMESPACE: rcs-mvp
+          USERID: ${{ github.event.inputs.USERID }}
         run: |
+          # Set environment variables for deployment
+          export auth_image_path="${IMAGE_REG}/${IMAGE_ORG}/rcs-auth:${IMAGE_TAG}"
+          export message_image_path="${IMAGE_REG}/${IMAGE_ORG}/rcs-message:${IMAGE_TAG}"
+          export history_image_path="${IMAGE_REG}/${IMAGE_ORG}/rcs-history:${IMAGE_TAG}"
+          export basedata_image_path="${IMAGE_REG}/${IMAGE_ORG}/rcs-basedata:${IMAGE_TAG}"
+          export userid=${USERID}
+          export app_namespace=${APP_NAMESPACE}
+          
+          # Generate deployment manifest
           envsubst < deployment/deploy.yaml.template > deployment/deploy.yaml
+          
           echo "Generated deployment manifest:"
           cat deployment/deploy.yaml
+          
+          # Apply deployment
           kubectl apply -f deployment/deploy.yaml
 
       - name: Verify Deployment
