--- a/deployment/deploy.yaml.template
+++ b/deployment/deploy.yaml.template
@@ -60,17 +60,17 @@ spec:
     spec:
       containers:
       - name: auth-service
-        image: ${command_image_path}
+        image: ${auth_image_path}
         imagePullPolicy: Always
         ports:
         - containerPort: 8080        
         resources:
           requests:
-            cpu: ${resources_requests_cpu}
-            memory: ${resources_requests_memory}
+            cpu: 250m
+            memory: 512Mi
           limits:
-            cpu: ${resources_limits_cpu}
-            memory: ${resources_limits_memory}
+            cpu: 500m
+            memory: 1024Mi
 ---
 apiVersion: v1
 kind: Service
@@ -105,7 +105,7 @@ spec:
     spec:
       containers:
       - name: basedata-service
-        image: ${query_image_path}
+        image: ${basedata_image_path}
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
@@ -130,11 +130,11 @@ spec:
               key: BASEDATA_DB_PASSWORD
         resources:
           requests:
-            cpu: ${resources_requests_cpu}
-            memory: ${resources_requests_memory}
+            cpu: 250m
+            memory: 512Mi
           limits:
-            cpu: ${resources_limits_cpu}
-            memory: ${resources_limits_memory}
+            cpu: 500m
+            memory: 1024Mi
 ---
 apiVersion: v1
 kind: Service
@@ -169,7 +169,7 @@ spec:
     spec:
       containers:
       - name: history-service
-        image: ${query_image_path}
+        image: ${history_image_path}
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
@@ -215,11 +215,11 @@ spec:
           value: "rcs-message-result" 		  
         resources:
           requests:
-            cpu: ${resources_requests_cpu}
-            memory: ${resources_requests_memory}
+            cpu: 250m
+            memory: 512Mi
           limits:
-            cpu: ${resources_limits_cpu}
-            memory: ${resources_limits_memory}
+            cpu: 500m
+            memory: 1024Mi
 ---
 apiVersion: v1
 kind: Service
@@ -254,7 +254,7 @@ spec:
     spec:
       containers:
       - name: message-service
-        image: ${query_image_path}
+        image: ${message_image_path}
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
@@ -315,11 +315,11 @@ spec:
           value: "rcs-message-result" 		  
         resources:
           requests:
-            cpu: ${resources_requests_cpu}
-            memory: ${resources_requests_memory}
+            cpu: 250m
+            memory: 512Mi
           limits:
-            cpu: ${resources_limits_cpu}
-            memory: ${resources_limits_memory}
+            cpu: 500m
+            memory: 1024Mi
 ---
 apiVersion: v1
 kind: Service
