--- a/.github/workflows/cicd2.yml
+++ b/.github/workflows/cicd2.yml
@@ -167,21 +167,22 @@ jobs:
           APP_NAMESPACE: rcs-mvp
           USERID: ${{ github.event.inputs.USERID }}
         run: |
-          # Set environment variables for deployment
+          # Set variables for envsubst
           export auth_image_path="${IMAGE_REG}/${IMAGE_ORG}/rcs-auth:${IMAGE_TAG}"
           export message_image_path="${IMAGE_REG}/${IMAGE_ORG}/rcs-message:${IMAGE_TAG}"
           export history_image_path="${IMAGE_REG}/${IMAGE_ORG}/rcs-history:${IMAGE_TAG}"
           export basedata_image_path="${IMAGE_REG}/${IMAGE_ORG}/rcs-basedata:${IMAGE_TAG}"
-          export userid=${USERID}
-          export app_namespace=${APP_NAMESPACE}
+          export userid="${USERID}"
+          export app_namespace="${APP_NAMESPACE}"
           
-          # Generate deployment manifest
+          # Generate manifest
           envsubst < deployment/deploy.yaml.template > deployment/deploy.yaml
           
+          # Display for verification
           echo "Generated deployment manifest:"
           cat deployment/deploy.yaml
           
-          # Apply deployment
+          # Apply manifest
           kubectl apply -f deployment/deploy.yaml
 
       - name: Verify Deployment
