--- a/auth-service/build.gradle
+++ b/auth-service/build.gradle
@@ -1,8 +1,7 @@
 dependencies {
-    implementation project(':common')
-    implementation 'org.postgresql:postgresql:42.7.1'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    // Spring Security
+    implementation (project(':common')) {
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-data-mongodb'
+    }
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.security:spring-security-config'
 
