--- a/basedata-service/build.gradle
+++ b/basedata-service/build.gradle
@@ -1,3 +1,5 @@
 dependencies {
-    implementation project(':common')
+    implementation (project(':common')){
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-data-mongodb'
+    }
 }
