--- a/.github/workflows/cicd2.yml
+++ b/.github/workflows/cicd2.yml
@@ -158,7 +158,7 @@ jobs:
             --from-literal=connection-string='${{ secrets.STORAGE_CONNECTION_STRING }}' \
             --dry-run=client -o yaml | kubectl apply -f -
 
-          kubectl create secret generic rcs-db-credentials \
+          kubectl create secret generic dg4us-db-credentials \
             --namespace ${APP_NAMESPACE} \
             --from-literal=AUTH_DB_PASSWORD='${{ secrets.RCS_DB_PASSWORD }}' \
             --from-literal=BASEDATA_DB_PASSWORD='${{ secrets.RCS_DB_PASSWORD }}' \
