--- a/.github/workflows/cicd2.yml
+++ b/.github/workflows/cicd2.yml
@@ -141,6 +141,12 @@ jobs:
           DB_NAMESPACE: rcs-mvp
           APP_NAMESPACE: rcs-mvp
         run: |
+          # Az CLI로 AKS 자격증명 갱신
+          az aks get-credentials \
+            --resource-group ${{ env.RESOURCE_GROUP }} \
+            --name ${{ github.event.inputs.USERID }}-aks \
+            --overwrite-existing
+            
           kubectl create namespace ${DB_NAMESPACE} --dry-run=client -o yaml | kubectl apply -f -
           kubectl create namespace ${APP_NAMESPACE} --dry-run=client -o yaml | kubectl apply -f -
           
