--- a/history-service/application.yml
+++ b/history-service/application.yml
@@ -21,3 +21,12 @@ azure:
       history: history-consumer-group
 server:
   port: 8083
+
+logging:
+  level:
+    org:
+      springframework:
+        data:
+          mongodb:
+            core:
+              MongoTemplate: DEBUG
