feat: common yaml 정리

--- a/message-service/application.yml
+++ b/message-service/application.yml
@@ -23,6 +23,7 @@ encryption:
 
 azure:
   eventhub:
+    enabled: true
     connection-string: ${EVENTHUB_CONNECTION_STRING}
     number-encrypt:
       name: ${EVENTHUB_ENCRYPT_NUM_REQ}
