--- a/.github/workflows/cicd2.yml
+++ b/.github/workflows/cicd2.yml
@@ -152,8 +152,7 @@ jobs:
           
           kubectl create secret generic eventhub-secret \
             --namespace ${APP_NAMESPACE} \
-            --from-literal=ehub-connection-string='${{ secrets.EVENTHUB_CONNECTION_STRING }}' \
-	--from-literal=azure.eventhub.connection-string='${{ secrets.EVENTHUB_CONNECTION_STRING }}' \--from-literal=azure.eventhub.name='${{ secrets.EVENTHUB_NAME }}' \--from-literal=azure.storage.connection-string='${{ secrets.STORAGE_CONNECTION_STRING }}' \--from-literal=encrypt-hub-name='number-encrypt-requests' \--from-literal=send-hub-name='rcs-message-send' \--from-literal=result-hub-name='rcs-message-result' \--from-literal=consumer-group='$Default' \	--dry-run=client -o yaml | kubectl apply -f -
+            --from-literal=ehub-connection-string='${{ secrets.EVENTHUB_CONNECTION_STRING }}' \ --from-literal=azure.eventhub.connection-string='${{ secrets.EVENTHUB_CONNECTION_STRING }}' \--from-literal=azure.eventhub.name='${{ secrets.EVENTHUB_NAME }}' \--from-literal=azure.storage.connection-string='${{ secrets.STORAGE_CONNECTION_STRING }}' \--from-literal=encrypt-hub-name='number-encrypt-requests' \--from-literal=send-hub-name='rcs-message-send' \--from-literal=result-hub-name='rcs-message-result' \--from-literal=consumer-group='$Default' \	--dry-run=client -o yaml | kubectl apply -f -
 
           kubectl create secret generic dg4us-db-credentials \
             --namespace ${APP_NAMESPACE} \
