--- a/.github/workflows/cicd2.yml
+++ b/.github/workflows/cicd2.yml
@@ -150,7 +150,7 @@ jobs:
           kubectl create namespace ${DB_NAMESPACE} --dry-run=client -o yaml | kubectl apply -f -
           kubectl create namespace ${APP_NAMESPACE} --dry-run=client -o yaml | kubectl apply -f -
           
-          kubectl create secret generic eventhub-secret \
+          kubectl create secret generic 'eventhub-secret' \
           	--namespace ${APP_NAMESPACE} \
           	--from-literal=ehub-connection-string='${{ secrets.EVENTHUB_CONNECTION_STRING }}' \
           	--from-literal=azure.eventhub.connection-string='${{ secrets.EVENTHUB_CONNECTION_STRING }}' \
@@ -160,7 +160,7 @@ jobs:
           	--from-literal=consumer-group='$Default' \	    
           	--dry-run=client -o yaml | kubectl apply -f -
 
-          kubectl create secret generic dg4us-db-credentials \
+          kubectl create secret generic 'dg4us-db-credentials' \
             --namespace ${APP_NAMESPACE} \
             --from-literal=AUTH_DB_PASSWORD='${{ secrets.RCS_DB_PASSWORD }}' \
             --from-literal=BASEDATA_DB_PASSWORD='${{ secrets.RCS_DB_PASSWORD }}' \
