--- a/auth-service/application.yml
+++ b/auth-service/application.yml
@@ -14,6 +14,11 @@ spring:
       ddl-auto: update
     show-sql: true
 
+logging:
+  level:
+    org:
+      springframework: DEBUG
+
 server:
   port: 8081
 
